# serializer version: 1
# name: test_vacuum[vacuum.700series_vacuum_rvc-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'Quiet',
        'Energy saving',
        'Standard',
        'Powerful',
        'Max power',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.700series_vacuum_rvc',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RVC',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RVC',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12604>,
    'translation_key': None,
    'unique_id': '900402068224000950000000_rvc',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[vacuum.700series_vacuum_rvc-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <VacuumEntityStateAttribute.FAN_SPEED: 'fan_speed'>: 'Powerful',
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'Quiet',
        'Energy saving',
        'Standard',
        'Powerful',
        'Max power',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '700series vacuum RVC',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <VacuumEntityFeature: 12604>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.700series_vacuum_rvc',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docked',
  })
# ---
# name: test_vacuum[vacuum.cybele_vacuum_rvc-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'Quiet',
        'Energy saving',
        'Standard',
        'Powerful',
        'Max',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.cybele_vacuum_rvc',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RVC',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RVC',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12604>,
    'translation_key': None,
    'unique_id': '900402423524000511139298_rvc',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[vacuum.cybele_vacuum_rvc-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <VacuumEntityStateAttribute.FAN_SPEED: 'fan_speed'>: 'Powerful',
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'Quiet',
        'Energy saving',
        'Standard',
        'Powerful',
        'Max',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Cybele vacuum RVC',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <VacuumEntityFeature: 12604>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.cybele_vacuum_rvc',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docked',
  })
# ---
# name: test_vacuum[vacuum.gordias_vacuum_rvc-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'Quiet',
        'Energy saving',
        'Standard',
        'Powerful',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.gordias_vacuum_rvc',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RVC',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RVC',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12604>,
    'translation_key': None,
    'unique_id': '900402278332000201139298_rvc',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[vacuum.gordias_vacuum_rvc-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <VacuumEntityStateAttribute.FAN_SPEED: 'fan_speed'>: 'Quiet',
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'Quiet',
        'Energy saving',
        'Standard',
        'Powerful',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gordias vacuum RVC',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <VacuumEntityFeature: 12604>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.gordias_vacuum_rvc',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docked',
  })
# ---
# name: test_vacuum[vacuum.pure_i9_vacuum_rvc-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'Silent',
        'Smart',
        'Power',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.pure_i9_vacuum_rvc',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RVC',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RVC',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12604>,
    'translation_key': None,
    'unique_id': '900277470043000491100106_rvc',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[vacuum.pure_i9_vacuum_rvc-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <VacuumEntityStateAttribute.FAN_SPEED: 'fan_speed'>: 'Smart',
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'Silent',
        'Smart',
        'Power',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pure i9 vacuum RVC',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <VacuumEntityFeature: 12604>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.pure_i9_vacuum_rvc',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
